--- a/.classpath
+++ b/.classpath
@@ -28,5 +28,38 @@
 	<classpathentry kind="lib" path="lib/slf4j-api-1.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/swarmcache-1.0RC2.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.aop-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.asm-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.aspects-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.beans-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.context-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.context.support-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.core-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.expression-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.instrument-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.instrument.tomcat-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.jdbc-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.jms-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.orm-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.oxm-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.test-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.transaction-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.web-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.web.portlet-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.web.servlet-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/org.springframework.web.struts-3.0.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-security-acl-3.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-security-cas-client-3.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-security-config-3.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-security-core-3.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-security-ldap-3.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-security-openid-3.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-security-taglibs-3.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-security-web-3.0.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/standard.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/MFontAwesome.jar"/>
+	<classpathentry kind="lib" path="lib/font-awesome-4.0.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
