Adicionado a tela de avaliação e tela de convenio e arrumado outras coisas

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,7 @@ eclipse.preferences.version=1
 encoding//WebContent/CadastroCliente.xhtml=UTF-8
 encoding//WebContent/CadastroEmpresa.xhtml=UTF-8
 encoding//WebContent/CadastroFuncionario.xhtml=UTF-8
+encoding//WebContent/WebRefeicoes.html=UTF-8
 encoding//WebContent/index.xhtml=UTF-8
 encoding//WebContent/login.xhtml=UTF-8
 encoding/<project>=UTF-8
