--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,5 +4,6 @@ encoding//WebContent/CadastroEmpresa.xhtml=UTF-8
 encoding//WebContent/CadastroFuncionario.xhtml=UTF-8
 encoding//WebContent/WebRefeicoes.html=UTF-8
 encoding//WebContent/index.xhtml=UTF-8
+encoding//WebContent/indexCliente.xhtml=UTF-8
 encoding//WebContent/login.xhtml=UTF-8
 encoding/<project>=UTF-8
